笔记本页面时间问题解决

--- a/src/assets/css/NotebookList.less
+++ b/src/assets/css/NotebookList.less
@@ -30,6 +30,7 @@
     padding: 30px 40px;
   }
   .layout {
+
     max-width: 966px;
     margin: 0 auto;
   }
@@ -48,6 +49,7 @@
     border-radius: 4px;
     font-weight: bold;
   }
+
   main .book-list span {
     font-size: 12px;
     font-weight: bold;
@@ -55,6 +57,7 @@
   }
   main .date,
   main .action{
+    //border:1px solid red;
     float: right;
     margin-left: 10px;
   }
