--- a/src/assets/css/NotebookList.less
+++ b/src/assets/css/NotebookList.less
@@ -1,6 +1,7 @@
 #notebook-list {
   flex: 1;
-
+  max-height: 100vh;
+  overflow:auto;
   .btn {
     font-size: 12px;
     color: #666;
@@ -42,38 +43,44 @@
   }
 
   main .book-list {
+    max-height: 80vh;
+    overflow: auto;
+    box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
     margin-top: 10px;
     font-size: 14px;
     color: #666;
     background-color: #fff;
     border-radius: 4px;
     font-weight: bold;
+    &::-webkit-scrollbar {
+      display: none; /* Chrome Safari */
+    }
   }
 
   main .book-list span {
+    display: block;
     font-size: 12px;
     font-weight: bold;
     color: #b3c0c8;
   }
-  main .date,
-  main .action{
-    //border:1px solid red;
-    float: right;
-    margin-left: 10px;
+  main .date{
+    margin-right: 12px;
   }
   main .iconfont {
     color: #1687ea;
-    margin-right: 4px;
+    margin-right: 8px;
   }
   main .notebook {
     display: block;
     cursor: pointer;
   }
-  main a.notebook:hover {
-    background-color: #f7fafd;
+  main a.notebook{
+    display:block;
   }
 
-  main a.notebook div {
+  main a.notebook .coat {
+    display: flex;
+    justify-content: space-between;
     border-bottom: 1px solid #ebebeb;
     padding: 12px 14px;
   }
@@ -83,4 +90,18 @@
     color: red;
   }
 
+}
+.wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .counts{
+    margin-left: 4px;
+    vertical-align: middle;
+  }
+}
+.coat{
+  &:hover {
+    background-color: #f7fafd;
+  }
 }
