删除功能完成 ui优化

--- a/src/assets/css/NoteDetail.less
+++ b/src/assets/css/NoteDetail.less
@@ -52,7 +52,7 @@
     height: ~"calc(100% - 70px)";
     position: relative;
   }
-  textarea, .preview {
+  textarea{
     position: absolute;
     width: 100%;
     height: 100%;
